# webpack-wasm-template

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
.github/: FUNDING.yml
hello-world/: Cargo.toml
hello-world/src/: lib.rs
src/: index.js
